--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-window": "^1.8.5",
     "react": "^17.0.2",
+    "react-cool-virtual": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.12.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "react-spinners": "^0.12.0"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
