--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-window": "^1.8.5",
+    "intersection-observer": "^0.12.2",
     "react": "^17.0.2",
     "react-cool-virtual": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.12.0",
+    "resize-observer-polyfill": "^1.5.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
