--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-window": "^1.8.5",
+    "axios": "^0.27.2",
     "intersection-observer": "^0.12.2",
     "react": "^17.0.2",
     "react-cool-virtual": "^0.7.0",
